// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders container correctly 1`] = `
<div
  className="css-fnvopl"
>
  The children!
</div>
`;

exports[`Container renders container correctly with top padding 1`] = `
<div
  className="css-y05ap"
>
  The children!
</div>
`;
